--- a/index.html
+++ b/index.html
@@ -17,13 +17,38 @@
 </header>
 
 <main>
-
     <section>
+        <div class="container">
         <h2>Wat zeggen klanten over ons</h2>
+        </div>
+        <br>
+        <br>
+        <div class="bordered-box">
+            <img src="assets/icons/quote-left.png" alt="Quote" class="additional-image">
+        <p>Al jaren klant bij Domein.shop. De service is goed en medewerkers zijn zeer klantvriendelijk. Snelle response, zelfs op momenten dat je het niet verwacht.</p>
+            <br>
+            <img src="assets/images/avatar-jane.png" alt="Image-Jane">
+            <div class="inline-block-text">
+            <p>Jane Doe, Managing Director</p>
+            </div>
+        </div>
+        <br>
+        <div class="bordered-box">
+            <img src="assets/icons/quote-left.png" alt="Quote" class="additional-image">
+        <p>Ik ben tevreden over Domein.shop. Met name de snelle reactie op mijn vragen en goede service maakt dat ik TransIP aan iedereen aanbeveel.</p>
+            <br>
+            <img src="assets/images/avatar-john.png" alt="Image-John">
+            <div class="inline-block-text">
+            <p>John Smith, Frontend Developer</p>
+                </div>
+        </div>
     </section>
-
+    <br>
+    <br>
     <section class="centered-section">
-    <h2>Wij staan voor je klaar</h2>
+        <div class="container">
+        <h2>Wij staan voor je klaar</h2>
+        </div>
         <br>
         <br>
         <img src="assets/images/callcenter.jpg" alt="Callcenter" class="rounded-image">
@@ -36,7 +61,9 @@
     <br>
     <br>
     <section>
+        <div class="container">
         <h2>Veelgestelde vragen</h2>
+        </div>
         <br>
         <br>
         <div class="clickable-element">
@@ -63,7 +90,9 @@
     </section>
 </main>
 <footer>
+    <div class="container">
 <p>Copyright © 2022, all rights reserved.</p>
+    </div>
 </footer>
 </body>
 </html>
